added existing file

--- a/spam-classifier.ipynb
+++ b/spam-classifier.ipynb
@@ -768,16 +768,14 @@
     "\n",
     "There are a couple of ways to mitigate this. One way is to use the `stop_words` parameter and set its value to `english`. This will automatically ignore all the words in our input text that are found in a built-in list of English stop words in scikit-learn.\n",
     "\n",
-    "Another way of mitigating this is by using the [tfidf](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html#sklearn.feature_extraction.text.TfidfVectorizer) method. This method is out of scope for the context of this lesson."
+    "Another way of mitigating this is by using the [tfidf](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html#sklearn.feature_extraction.text.TfidfVectorizer) method."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3.1: Training and testing sets ###\n",
-    "\n",
-    "Now that we understand how to use the Bag of Words approach, we can return to our original, larger UCI dataset and proceed with our analysis. Our first step is to split our dataset into a training set and a testing set so we can first train, and then test our model. "
+    "### Step 3.1: Training and testing sets ###\n"
    ]
   },
   {
@@ -832,9 +830,7 @@
     "\n",
     "Note that `X_train` is our training data for the 'sms_message' column in our dataset and we will be using this to train our model. \n",
     "\n",
-    "`X_test` is our testing data for the 'sms_message' column and this is the data we will be using (after transformation to a matrix) to make predictions on. We will then compare those predictions with `y_test` in a later step. \n",
-    "\n",
-    "For now, we have provided the code that does the matrix transformations for you!"
+    "`X_test` is our testing data for the 'sms_message' column and this is the data we will be using (after transformation to a matrix) to make predictions on. We will then compare those predictions with `y_test` in a later step. "
    ]
   },
   {
