--- a/spam-classifier.ipynb
+++ b/spam-classifier.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Spam detection is one of the major applications of Machine Learning in the interwebs today. Pretty much all of the major email service providers have spam detection systems built in and automatically classify such mail as 'Junk Mail'. \n",
     "\n",
-    "Here we will be using the Naive Bayes algorithm to create a model that can classify SMS messages as spam or not spam, based on the training we give to the model. It is important to have some level of intuition as to what a spammy text message might look like. Often they have words like 'free', 'win', 'winner', 'cash', 'prize' and the like in them as these texts are designed to catch your eye and in some sense tempt you to open them. Also, spam messages tend to have words written in all capitals and also tend to use a lot of exclamation marks. To the human recipient, it is usually pretty straightforward to identify a spam text and our objective here is to train a model to do that for us!\n"
+    "Here we will be using the Naive Bayes algorithm to create a model that can classify SMS messages as spam or not spam, based on the training we give to the model.\n"
    ]
   },
   {
@@ -112,11 +112,7 @@
    "source": [
     "### Step 1.2: Data Preprocessing ###\n",
     "\n",
-    " let's convert our labels to binary variables, 0 to represent 'ham'(i.e. not spam) and 1 to represent 'spam' for ease of computation. \n",
-    "\n",
-    "why do we need to do this step? The answer to this lies in how scikit-learn handles inputs. Scikit-learn only deals with numerical values and hence if we were to leave our label values as strings, scikit-learn would do the conversion internally(more specifically, the string labels will be cast to unknown float values). \n",
-    "\n",
-    "Our model would still be able to make predictions if we left our labels as strings but we could have issues later when calculating performance metrics, for example when calculating our precision and recall scores. Hence, to avoid unexpected 'gotchas' later, it is good practice to have our categorical values be fed into our model as integers. "
+    " let's convert our labels to binary variables, 0 to represent 'ham'(i.e. not spam) and 1 to represent 'spam' for ease of computation. \n"
    ]
   },
   {
@@ -212,45 +208,8 @@
    "source": [
     "### Step 2.1: Bag of Words ###\n",
     "\n",
-    "What we have here in our data set is a large collection of text data (5,572 rows of data). Most ML algorithms rely on numerical data to be fed into them as input, and email/sms messages are usually text heavy. \n",
-    "\n",
-    "Here we'd like to introduce the Bag of Words (BoW) concept which is a term used to specify the problems that have a 'bag of words' or a collection of text data that needs to be worked with. The basic idea of BoW is to take a piece of text and count the frequency of the words in that text. It is important to note that the BoW concept treats each word individually and the order in which the words occur does not matter. \n",
-    "\n",
-    "Using a process which we will go through now, we can convert a collection of documents to a matrix, with each document being a row and each word (token) being the column, and the corresponding (row, column) values being the frequency of occurrence of each word or token in that document.\n",
-    "\n",
-    "For example: \n",
-    "\n",
-    "Let's say we have 4 documents, which are text messages\n",
-    "in our case, as follows:\n",
-    "\n",
-    "`['Hello, how are you!',\n",
-    "'Win money, win from home.',\n",
-    "'Call me now',\n",
-    "'Hello, Call you tomorrow?']`\n",
-    "\n",
-    "Our objective here is to convert this set of texts to a frequency distribution matrix, as follows:\n",
-    "\n",
-    "<img src=\"images/countvectorizer.png\" height=\"542\" width=\"542\">\n",
-    "\n",
-    "Here as we can see, the documents are numbered in the rows, and each word is a column name, with the corresponding value being the frequency of that word in the document.\n",
-    "\n",
-    "Let's break this down and see how we can do this conversion using a small set of documents.\n",
-    "\n",
-    "To handle this, we will be using sklearn's \n",
-    "[count vectorizer](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html#sklearn.feature_extraction.text.CountVectorizer) method which does the following:\n",
-    "\n",
-    "* It tokenizes the string (separates the string into individual words) and gives an integer ID to each token.\n",
-    "* It counts the occurrence of each of those tokens.\n",
-    "\n",
-    "**Please Note:** \n",
-    "\n",
-    "* The CountVectorizer method automatically converts all tokenized words to their lower case form so that it does not treat words like 'He' and 'he' differently. It does this using the `lowercase` parameter which is by default set to `True`.\n",
-    "\n",
-    "* It also ignores all punctuation so that words followed by a punctuation mark (for example: 'hello!') are not treated differently than the same words not prefixed or suffixed by a punctuation mark (for example: 'hello'). It does this using the `token_pattern` parameter which has a default regular expression which selects tokens of 2 or more alphanumeric characters.\n",
-    "\n",
-    "* The third parameter to take note of is the `stop_words` parameter. Stop words refer to the most commonly used words in a language. They include words like 'am', 'an', 'and', 'the', etc. By setting this parameter value to `english`, CountVectorizer will automatically ignore all words (from our input text) that are found in the built in list of English stop words in scikit-learn. This is extremely helpful as stop words can skew our calculations when we are trying to find certain key words that are indicative of spam.\n",
-    "\n",
-    "We will dive into the application of each of these into our model in a later step, but for now it is important to be aware of such preprocessing techniques available to us when dealing with textual data."
+    " Bag of Words (BoW) concept which is a collection of text data that needs to be worked with. The basic idea of BoW is to take a piece of text and count the frequency of the words in that text. It is important to note that the BoW concept treats each word individually and the order in which the words occur does not matter. \n",
+    "\n"
    ]
   },
   {
@@ -259,18 +218,7 @@
    "source": [
     "### Step 2.2: Implementing Bag of Words from scratch ###\n",
     "\n",
-    "Before we dive into scikit-learn's Bag of Words (BoW) library to do the dirty work for us, let's implement it ourselves first so that we can understand what's happening behind the scenes. \n",
-    "\n",
-    "**Step 1: Convert all strings to their lower case form.**\n",
-    "\n",
-    "Let's say we have a document set:\n",
-    "\n",
-    "```\n",
-    "documents = ['Hello, how are you!',\n",
-    "             'Win money, win from home.',\n",
-    "             'Call me now.',\n",
-    "             'Hello, Call hello you tomorrow?']\n",
-    "```\n"
+    "**Step 1: Convert all strings to their lower case form.**\n"
    ]
   },
   {
@@ -826,11 +774,7 @@
     "Now that we have split the data, our next objective is to follow the steps from \"Step 2: Bag of Words,\" and convert our data into the desired matrix format. To do this we will be using CountVectorizer() as we did before. There are two  steps to consider here:\n",
     "\n",
     "* First, we have to fit our training data (`X_train`) into `CountVectorizer()` and return the matrix.\n",
-    "* Secondly, we have to transform our testing data (`X_test`) to return the matrix. \n",
-    "\n",
-    "Note that `X_train` is our training data for the 'sms_message' column in our dataset and we will be using this to train our model. \n",
-    "\n",
-    "`X_test` is our testing data for the 'sms_message' column and this is the data we will be using (after transformation to a matrix) to make predictions on. We will then compare those predictions with `y_test` in a later step. "
+    "* Secondly, we have to transform our testing data (`X_test`) to return the matrix. "
    ]
   },
   {
@@ -882,8 +826,6 @@
    "metadata": {},
    "source": [
     "### Step 4.1: Bayes Theorem implementation from scratch ###\n",
-    "\n",
-    "Now that we have our dataset in the format that we need, we can move onto the next portion of our mission which is the  algorithm we will use to make our predictions to classify a message as spam or not spam. Remember that at the start of the mission we briefly discussed the Bayes theorem but now we shall go into a little more detail. In layman's terms, the Bayes theorem calculates the probability of an event occurring, based on certain other probabilities that are related to the event in question. It is composed of \"prior probabilities\" - or just \"priors.\" These \"priors\" are the probabilities that we are aware of, or that are given to us. And Bayes theorem is also composed of the \"posterior probabilities,\" or just \"posteriors,\" which are the probabilities we are looking to compute using the \"priors\". \n",
     "\n",
     "Let us implement the Bayes Theorem from scratch using a simple example. Let's say we are trying to find the odds of an individual having diabetes, given that he or she was tested for it and got a positive result. \n",
     "In the medical field, such probabilities play a very important role as they often deal with life and death situations. \n",
@@ -1152,7 +1094,7 @@
     "\n",
     "Now we are at a place where we can define the formula for the Naive Bayes' theorem:\n",
     "\n",
-    "<img src=\"images/naivebayes.png\" height=\"342\" width=\"342\">\n",
+    "<img src=\"images/naive_bayes.png\" height=\"342\" width=\"342\">\n",
     "\n",
     "Here, `y` is the class variable (in our case the name of the candidate) and `x1` through `xn` are the feature vectors (in our case the individual words). The theorem makes the assumption that each of the feature vectors or words (`xi`) are independent of each other."
    ]
@@ -1377,21 +1319,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For another example of Naive Bayes, let's consider searching for images using the term 'Sacramento Kings' in a search engine. In order for us to get the results pertaining to the Scramento Kings NBA basketball team, the search engine needs to be able to associate the two words together and not treat them individually. If the search engine only searched for the words individually, we would get results of images tagged with 'Sacramento,' like pictures of city landscapes, and images of 'Kings,' which might be pictures of crowns or kings from history. But associating the two terms together would produce images of the basketball team. In the first approach we would treat the words as independent entities, so it would be considered 'naive.' We don't usually want this approach from a search engine, but it can be extremely useful in other cases. \n",
-    "\n",
-    "\n",
-    "Applying this to our problem of classifying messages as spam, the Naive Bayes algorithm *looks at each word individually and not as associated entities* with any kind of link between them. In the case of spam detectors, this usually works, as there are certain red flag words in an email which are highly reliable in classifying it as spam. For example, emails with words like 'viagra' are usually classified as spam."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Step 5: Naive Bayes implementation using scikit-learn ###\n",
     "\n",
-    "Now let's return to our spam classification context. Thankfully, sklearn has several Naive Bayes implementations that we can use, so we do not have to do the math from scratch. We will be using sklearn's `sklearn.naive_bayes` method to make predictions on our SMS messages dataset. \n",
+    "sklearn has several Naive Bayes implementations that we can use, so we do not have to do the math from scratch. We will be using sklearn's `sklearn.naive_bayes` method to make predictions on our SMS messages dataset. \n",
     "\n",
-    "Specifically, we will be using the multinomial Naive Bayes algorithm. This particular classifier is suitable for classification with discrete features (such as in our case, word counts for text classification). It takes in integer word counts as its input. On the other hand, Gaussian Naive Bayes is better suited for continuous data as it assumes that the input data has a Gaussian (normal) distribution."
+    "We will be using the multinomial Naive Bayes algorithm. This particular classifier is suitable for classification with discrete features (such as in our case, word counts for text classification). It takes in integer word counts as its input. On the other hand, Gaussian Naive Bayes is better suited for continuous data as it assumes that the input data has a Gaussian (normal) distribution."
    ]
   },
   {
@@ -1500,8 +1432,6 @@
     "It is a ratio of true positives (words classified as spam, and which actually are spam) to all the words that were actually spam. In other words, recall is the ratio of\n",
     "\n",
     "`[True Positives/(True Positives + False Negatives)]`\n",
-    "\n",
-    "For classification problems that are skewed in their classification distributions like in our case - for example if we had 100 text messages and only 2 were spam and the other 98 weren't - accuracy by itself is not a very good metric. We could classify 90 messages as not spam (including the 2 that were spam but we classify them as not spam, hence they would be false negatives) and 10 as spam (all 10 false positives) and still get a reasonably good accuracy score. For such cases, precision and recall come in very handy. These two metrics can be combined to get the **F1 score**.\n",
     "\n",
     "**F1 score**,  is the weighted average of the `precision and recall scores`. This score can range from 0 to 1, with 1 being the best possible F1 score."
    ]
